--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(stocappControl)
 exportClasses(Stocapp)
 exportClasses(StocappBetareg)
 exportClasses(StocappGlm)
+exportClasses(StocappGlmrob2)
 exportClasses(StocappLm)
 exportClasses(StocappLmer)
 exportClasses(StocappNegbin)
